# acst

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
HSpice/: CMakeLists.txt
HSpice/incl/DeviceLineMappingFile/: DeviceLineMapper.h  DeviceLineMapping.h  DeviceLineMappingFile.h
HSpice/incl/InputFile/: GlobalNetMap.h  InputFile.h  ModelName.h  TechTypeMapper.h  TechTypeMappingFile.h
HSpice/incl/InputFile/DeviceLine/: DeviceLine.h  Devices.h
HSpice/incl/InputFile/InstanceLine/: Instance.h  InstanceLine.h  InstanceTerminalOrdering.h  Instances.h
HSpice/incl/InputFile/NetIdentifiers/: GlobalNetIdentifiers.h  NetIdentifiers.h
HSpice/incl/InputFile/NetIds/: GlobalNetIds.h  NetIds.h
HSpice/incl/InputFile/SubCircuitParser/: InstantiatedSubCircuit.h  InstantiatedSubCircuitMap.h  SubCircuit.h  SubCircuitParser.h  SubCircuits.h  TerminalOrdering.h
HSpice/incl/InputFile/SupplyNet/: SupplyNetFile.h  SupplyNetIdentifiers.h
HSpice/incl/OutputFile/: DeviceLine.h  HSpiceString.h  OutputFile.h  SubCircuitRecursion.h
HSpice/incl/OutputFile/SubCircuitMap/: SubCircuit.h  SubCircuitMap.h
HSpice/incl/OutputFile/TerminalOrderingMap/: TerminalOrdering.h  TerminalOrderingMap.h
HSpice/src/: CMakeLists.txt
HSpice/src/DeviceLineMappingFile/: CMakeLists.txt  DeviceLineMapper.cpp  DeviceLineMapping.cpp  DeviceLineMappingFile.cpp
HSpice/src/InputFile/: CMakeLists.txt  GlobalNetMap.cpp  InputFile.cpp  ModelName.cpp  TechTypeMapper.cpp  TechTypeMappingFile.cpp
HSpice/src/InputFile/DeviceLine/: CMakeLists.txt  DeviceLine.cpp  Devices.cpp
HSpice/src/InputFile/InstanceLine/: CMakeLists.txt  Instance.cpp  InstanceLine.cpp  InstanceTerminalOrdering.cpp  Instances.cpp
HSpice/src/InputFile/NetIdentifiers/: CMakeLists.txt  GlobalNetIdentifiers.cpp  NetIdentifiers.cpp
HSpice/src/InputFile/NetIds/: CMakeLists.txt  GlobalNetIds.cpp  NetIds.cpp
HSpice/src/InputFile/SubCircuitParser/: CMakeLists.txt  InstantiatedSubCircuit.cpp  InstantiatedSubCircuitMap.cpp  SubCircuit.cpp  SubCircuitParser.cpp  SubCircuits.cpp  TerminalOrdering.cpp
HSpice/src/InputFile/SupplyNet/: CMakeLists.txt  SupplyNetFile.cpp  SupplyNetIdentifiers.cpp
HSpice/src/OutputFile/: CMakeLists.txt  DeviceLine.cpp  HSpiceString.cpp  OutputFile.cpp  SubCircuitRecursion.cpp
HSpice/src/OutputFile/SubCircuitMap/: CMakeLists.txt  SubCircuit.cpp  SubCircuitMap.cpp
HSpice/src/OutputFile/TerminalOrderingMap/: CMakeLists.txt  TerminalOrdering.cpp  TerminalOrderingMap.cpp
HSpice/test/: test_ckt.sh
HSpice/test/data/AllDevices/: input.ckt
HSpice/test/data/DoubleInverter/: input.ckt  reference.ckt  supplyNets.xcat
HSpice/test/data/DoubleInverterWithProperties/: input.ckt
Partitioning/: CMakeLists.txt
Partitioning/incl/: LocalOptions.h  Partitioning.h  PartitioningAnalysis.h  PartitioningAnalysisFactory.h
Partitioning/incl/Parts/: BiasPart.h  CapacitancePart.h  CommonModeSignalDetectorPart.h  LoadPart.h  Part.h  PositiveFeedbackPart.h  ResistorPart.h  TransconductancePart.h  UndefinedPart.h
Partitioning/incl/Parts/PartId/: PartId.h  PartName.h
Partitioning/incl/Results/: Component.h  Result.h  Transistor.h  TwoPort.h
Partitioning/incl/misc/: eclipse-code-style.xml  inputAttributes.txt  project-settings.xml  template_cpp.xml  template_h.xml
Partitioning/src/: CMakeLists.txt  LocalOptions.cpp  Partitioning.cpp  PartitioningAnalysis.cpp  PartitioningAnalysisFactory.cpp
Partitioning/src/Parts/: BiasPart.cpp  CMakeLists.txt  CapacitancePart.cpp  CommonModeSignalDetectorPart.cpp  LoadPart.cpp  Part.cpp  PositiveFeedbackPart.cpp  ResistorPart.cpp  TransconductancePart.cpp  UndefinedPart.cpp
Partitioning/src/Parts/PartId/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PartId.cpp  PartName.cpp  cmake_install.cmake
Partitioning/src/Results/: CMakeLists.txt  Component.cpp  Result.cpp  Transistor.cpp  TwoPort.cpp
Partitioning/test/: testPartitioning.py
Partitioning/test/data/cascodeSymmetricalOTA/: reference.xml
Partitioning/test/data/complementaryOpAmp/: reference.xml
Partitioning/test/data/foca/: input.ckt  reference.xml  supplyNets.acst
Partitioning/test/data/focaOpAmp/: input.ckt  reference.xml  supplyNets.acst
Partitioning/test/data/foldedCascodeOpAmp/: input.ckt  reference.xml
Partitioning/test/data/foldedCascodeOpAmpWithGainEnhancer/: reference.xml
Partitioning/test/data/foldedCascodeOpAmpWithSlewRateEnhancer/: reference.xml
StructRec/: CMakeLists.txt
StructRec/incl/: LocalOptions.h  LocalOptionsForRuleGeneration.h  StructureCore.h  StructureRecognitionAnalysis.h  StructureRecognitionAnalysisFactory.h  StructureRecognitionRuleGeneration.h  StructureRecognitionRuleGenerationFactory.h
StructRec/incl/LibraryFile/: ArrayLibraryItemParser.h  ArrayLibraryParser.h  ChildPinType.h  LibraryFile.h  PairLibraryItemParser.h  PairLibraryParser.h
StructRec/incl/Results/: CircuitRegister.h  Result.h  StructureCircuits.h
StructRec/incl/RuleGeneration/: NewPairLibraryItem.h  NewRecognizedChild.h  PairLibraryItemCreator.h  PinConnectionKey.h  PinConnectionKeyMap.h
StructRec/incl/StructureCircuit/: StructureCircuit.h
StructRec/src/: CMakeLists.txt  LocalOptions.cpp  LocalOptionsForRuleGeneration.cpp  StructureCore.cpp  StructureRecognitionAnalysis.cpp  StructureRecognitionAnalysisFactory.cpp  StructureRecognitionRuleGeneration.cpp  StructureRecognitionRuleGenerationFactory.cpp
StructRec/src/LibraryFile/: ArrayLibraryItemParser.cpp  ArrayLibraryParser.cpp  CMakeLists.txt  ChildPinType.cpp  LibraryFile.cpp  PairLibraryItemParser.cpp  PairLibraryParser.cpp
StructRec/src/Results/: CMakeLists.txt  CircuitRegister.cpp  Result.cpp  StructureCircuits.cpp
StructRec/src/RuleGeneration/: CMakeLists.txt  NewPairLibraryItem.cpp  NewRecognizedChild.cpp  PairLibraryItemCreator.cpp  PinConnectionKey.cpp  PinConnectionKeyMap.cpp
StructRec/src/StructureCircuit/: CMakeLists.txt  StructureCircuit.cpp
StructRec/test/: testRuleGen.py  testStructRec.py
StructRec/xml/: AnalogLibrary.xml  ArrayLibrary.xml
StructRec/xml/Analog/: AnalogLibrary.xml
StructRec/xml/Array/: ArrayLibrary.xml
(+11041 files in other folders)
